new changes to photos

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
           <div class="card-body">
               <h2> Sistema de inspección de calidad en piezas metalmecánicas
                </h2>
-               <img src="images/inspeccion_piezasmetal.jpeg">
+               <img src="images/metalmecanica.jpg">
           </div>
       </li>
       <li class="card_scroll" id="card4">
@@ -254,7 +254,7 @@
         <div class="card-body">
             <h2>Diseño de amplificador de sensado para 
               circuitos de memoria NAND-Flash.</h2>
-               <img src="images/nand.jpg">
+               <img src="images/nand_nuevo.jpg">
         </div>
     </li>
   </ul>
